Try to fix nav button alignment.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,11 @@
-#loginLink,
-#registerLink {
+#login-link,
+#register-link {
   text-decoration: none;
   color: #ffffff80;
 }
 
-#loginLink:hover,
-#registerLink:hover {
+#login-link:hover,
+#register-link:hover {
   text-decoration: none;
   color: #ffffffbf;
 }
@@ -40,3 +40,11 @@
   /* font-weight: bold; */
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/********* Media Queries **************/
+
+/* @media (max-width: 767px) {
+  #register-link, #login-link{
+      margin-top: -300px;
+  }
+} */
